# srec

./: Cargo.toml  LICENCE.md  README.md
examples/: demo.mot  read_srec_file.rs  write_srec_file.rs
src/: checksum.rs  generate.rs  image.rs  lib.rs  parse.rs  reader.rs  record.rs  writer.rs
tests/: test_reader.rs  test_round_trip.rs  test_writer.rs
